Разметка featured works

--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
                     </div>
                 </div>
             </section>
+            <section class="featured">
+                <div class="container">
+                    <div class="title-category">
+                        Featured works
+                    </div>
+                    <div class="featured__works">
+                        <article class="work">
+                            <div class="work__img-wrap">
+                                <img src="" alt="" class="work__img">
+                            </div>
+                            <div class="work__info">
+
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
