--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="header__burger">
+                    <div class="header__burger-el"></div>
+                </div>
             </div>
         </header>
         <main class="main">
@@ -92,16 +95,71 @@
                     <div class="featured__works">
                         <article class="work">
                             <div class="work__img-wrap">
-                                <img src="" alt="" class="work__img">
+                                <img src="img/work/dashboard.png" alt="" class="work__img">
                             </div>
                             <div class="work__info">
-
+                                <div class="work__subtitle">
+                                    <div class="work__date">
+                                        2020
+                                    </div>
+                                    <div class="work__category">
+                                        Dashboard
+                                    </div>
+                                </div>
+                                <div class="work__text">
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </div>
+                            </div>
+                        </article>
+                        <article class="work">
+                            <div class="work__img-wrap">
+                                <img src="img/work/dashboard.png" alt="" class="work__img">
+                            </div>
+                            <div class="work__info">
+                                <div class="work__subtitle">
+                                    <div class="work__date">
+                                        2020
+                                    </div>
+                                    <div class="work__category">
+                                        Dashboard
+                                    </div>
+                                </div>
+                                <div class="work__text">
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </div>
+                            </div>
+                        </article>
+                        <article class="work">
+                            <div class="work__img-wrap">
+                                <img src="img/work/dashboard.png" alt="" class="work__img">
+                            </div>
+                            <div class="work__info">
+                                <div class="work__subtitle">
+                                    <div class="work__date">
+                                        2020
+                                    </div>
+                                    <div class="work__category">
+                                        Dashboard
+                                    </div>
+                                </div>
+                                <div class="work__text">
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </div>
                             </div>
                         </article>
                     </div>
                 </div>
             </section>
         </main>
+        <footer class="footer">
+
+        </footer>
     </div>
 </body>
 
