--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </section>
             <section class="recent-posts">
-                <div class="container">
+                <div class="container recent-posts__container">
                     <div class="recent-posts__top">
                         <div class="recent-posts__title title-category">Recent posts</div>
                         <a href="#" class="recent-posts__link">View all</a>
