Стилизация Избранные работы Адаптив

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                                 <img src="img/work/dashboard.png" alt="" class="work__img">
                             </div>
                             <div class="work__info">
+                                <div class="work__info-title">Designing Dashboards</div>
                                 <div class="work__subtitle">
                                     <div class="work__date">
                                         2020
@@ -118,6 +119,7 @@
                                 <img src="img/work/dashboard.png" alt="" class="work__img">
                             </div>
                             <div class="work__info">
+                                <div class="work__info-title">Designing Dashboards</div>
                                 <div class="work__subtitle">
                                     <div class="work__date">
                                         2020
@@ -138,6 +140,7 @@
                                 <img src="img/work/dashboard.png" alt="" class="work__img">
                             </div>
                             <div class="work__info">
+                                <div class="work__info-title">Designing Dashboards</div>
                                 <div class="work__subtitle">
                                     <div class="work__date">
                                         2020
