--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <a href="#" class="nav__link">Works</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Blog</a>
+                            <a href="blog.html" class="nav__link">Blog</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">Contact</a>
@@ -160,8 +160,23 @@
                 </div>
             </section>
         </main>
-        <footer class="footer">
-
+        <footer class="container footer">
+            <div class="footer__content">
+                <ul class="footer__social-list">
+                    <li class="footer__social-item">
+                        <a href="" class="footer__social-link footer__social-link--fb">fb</a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a href="" class="footer__social-link footer__social-link--insta">insta</a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a href="" class="footer__social-link footer__social-link--tw">tw</a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a href="" class="footer__social-link footer__social-link--in">in</a>
+                    </li>
+                </ul>
+            </div>
         </footer>
     </div>
 </body>
