--- a/blog.html
+++ b/blog.html
@@ -37,11 +37,39 @@
         </header>
         <main class="main">
             <div class="blog container">
-
+                <div class="blog__title">Blog</div>
+                <div class="blog__articles">
+                    <article class="blog__article">
+                        <a href="#" class="blog__article-title">Making a design system from scratch</a>
+                        <div class="blog__info">
+                            12 Feb 2020 <span class="blog__separator">|</span>Design, Pattern
+                        </div>
+                        <div class="blog__articles-content">
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </div>
+                    </article>
+                </div>
             </div>
         </main>
-        <footer class="footer">
-
+        <footer class="container footer">
+            <ul class="footer__social-list">
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link vk">vk</a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link ok">ok</a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link github">github</a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link telegram">telegram</a>
+                </li>
+            </ul>
+            <div class="footer__copyright">
+                Copyright ©2020 All rights reserved
+            </div>
         </footer>
     </div>
 </body>
