--- a/index.html
+++ b/index.html
@@ -161,21 +161,22 @@
             </section>
         </main>
         <footer class="container footer">
-            <div class="footer__content">
-                <ul class="footer__social-list">
-                    <li class="footer__social-item">
-                        <a href="" class="footer__social-link footer__social-link--fb">fb</a>
-                    </li>
-                    <li class="footer__social-item">
-                        <a href="" class="footer__social-link footer__social-link--insta">insta</a>
-                    </li>
-                    <li class="footer__social-item">
-                        <a href="" class="footer__social-link footer__social-link--tw">tw</a>
-                    </li>
-                    <li class="footer__social-item">
-                        <a href="" class="footer__social-link footer__social-link--in">in</a>
-                    </li>
-                </ul>
+            <ul class="footer__social-list">
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link vk">vk</a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link ok">ok</a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link github">github</a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link telegram">telegram</a>
+                </li>
+            </ul>
+            <div class="footer__copyright">
+                Copyright ©2020 All rights reserved
             </div>
         </footer>
     </div>
